fix(uf): menu options get clipped by parent

--- a/src/client/stylesheets/style.scss
+++ b/src/client/stylesheets/style.scss
@@ -786,3 +786,6 @@ $uf-primary:#EB743B;
 .series-editor-select {
 	margin-top: 1.7em;
 }
+.uf-dialog .accordion > .card{
+	overflow:visible;
+}
